Format code and improve readability
diff --git
a/examples/three-types-of-exception/src/main/java/ch/example/threetypesofexception/infrastructure/CustomerRepositoryImpl.java
b/examples/three-types-of-exception/src/main/java/ch/example/threetypesofexception/infrastructure/CustomerRepositoryImpl.java
From 37a534e..fac9eec 100644 Index:
examples/three-types-of-exception/src/main/java/ch/example/threetypesofexception/infrastructure/CustomerRepositoryImpl.java
IDEA additional info: Subsystem:
com.intellij.openapi.diff.impl.patch.CharsetEP <+>UTF-8
=================================================================== diff
--git
a/examples/three-types-of-exception/src/main/java/ch/example/threetypesofexception/infrastructure/CustomerRepositoryImpl.java
b/examples/three-types-of-exception/src/main/java/ch/example/threetypesofexception/infrastructure/CustomerRepositoryImpl.java
---
a/examples/three-types-of-exception/src/main/java/ch/example/threetypesofexception/infrastructure/CustomerRepositoryImpl.java
+++
b/examples/three-types-of-exception/src/main/java/ch/example/threetypesofexception/infrastructure/CustomerRepositoryImpl.java
@@ -7,9 +7,8 @@ import
ch.example.threetypesofexception.domain.CustomerName; import
ch.example.threetypesofexception.domain.CustomerRepository; import
ch.example.threetypesofexception.domain.Title; -import
org.springframework.stereotype.Repository; - import java.util.List;
+import org.springframework.stereotype.Repository;

 @Repository class CustomerRepositoryImpl implements CustomerRepository
 { @@ -18,14 +17,21 @@ public List<Customer> findByName(CustomerName
 customerName) { List<CustomerDbEntity> customerDbEntities =
 loadCustomersFromDatabase();

- return customerDbEntities.stream() - .map(this::mapToDomainObject) -
.toList(); + return customerDbEntities + .stream() +
.map(this::mapToDomainObject) + .collect(Collectors.toList()); }

private Customer mapToDomainObject(CustomerDbEntity customerDbEntity) {
- Title title = Title.from(customerDbEnt